Even more "Quick Fixes" for IDE warnings
Signed-off-by: currantw <taylor.curran@improving.com>